--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pyaudio = "^0.2.14"
 speechrecognition = "^3.10.0"
 openai-whisper = [{git = "https://github.com/openai/whisper.git"}]
 torch = [{url = "https://download.pytorch.org/whl/cpu/torch-2.1.0-cp39-none-macosx_10_9_x86_64.whl"}]
+mkdocstrings = "^0.23.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
